<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_auth_bg"
                android:layout_width="411dp"
                android:layout_height="152dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="3dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_auth"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="@dimen/margin_auth"
                android:background="@drawable/bg_auth_field"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="@dimen/padding_field"
                android:fontFamily="@font/nunito_sans_reguler"
                android:hint="@string/text_hint_email_field"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_field"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/text_body_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_auth_bg"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_auth"
                android:layout_marginEnd="@dimen/margin_auth"
                android:background="@drawable/bg_auth_field"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/padding_field"
                android:fontFamily="@font/nunito_sans_reguler"
                android:hint="@string/text_hint_password_field"
                android:inputType="textPassword"
                android:padding="@dimen/padding_field"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/text_body_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_email"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_auth"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="@dimen/margin_auth"
                android:background="@drawable/bg_auth_btn"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/text_btn_sign_in"
                android:textColor="@color/colorTextORIcon"
                android:textSize="@dimen/text_btn_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_password" />

            <TextView
                android:id="@+id/copyright_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_reguler"
                android:text="© Kelompok 6"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_btn_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintVertical_bias="0.052" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</ScrollView>